# cri-archive-lib

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
cri-archive-lib/: Cargo.toml
cri-archive-lib/benches/: benchmarks.rs
cri-archive-lib/src/: lib.rs
cri-archive-lib/src/acb/: error.rs  header.rs  reader.rs
cri-archive-lib/src/cpk/: file.rs  free_list.rs  header.rs  reader.rs
cri-archive-lib/src/cpk/compress/: layla.rs
cri-archive-lib/src/cpk/encrypt/: data.rs  p5r.rs  table.rs
cri-archive-lib/src/schema/: columns.rs  header.rs  rows.rs  strings.rs
cri-archive-lib/src/utils/: endianness.rs  slice.rs  x86_64.rs
cri-cpk-extractor-cli/: Cargo.toml
cri-cpk-extractor-cli/src/: error_wrapper.rs  main.rs  printerr.rs  progress.rs
