[package]
name = "cri-archive-lib"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
acb = []
acf = []
awb = []
# CPK targeted parser
cpk = []

cpk_compression_layla = ["cpk"]
cpk_encryption_p5r = ["cpk"]
cpk_encryption_table = ["cpk"]

cpk_full = [
    "cpk_compression_layla",
    "cpk_encryption_p5r",
    "cpk_encryption_table"
]

dangerous = []
# Fully parse CRI Table data (if disabled, irrelevant data is skipped)
full_table = []